tests/src/frontend/typechecking/invalid/unused_locals_in_met_default.sk
class Tester() {
  fun f1(
    f: Int = {
      x = 1;
      42
    },
  ): void {
    void
  }
}
